--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
-.ui.borderless.menu {
+.ui.borderless.topmenu.menu {
   background-color: #f7f7f7;
+  box-shadow: none;
+  border: none;
+}
+
+.ui.borderless.shopmenu.menu {
+  background-color: white;
   box-shadow: none;
   border: none;
 }
